# compumetry

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: bst.h
lib/: Makefile.am  Makefile.in  bst.c
src/: Makefile.am  Makefile.in  main.c
